fix scrollbar css create secondary btn class

--- a/static/content/site.css
+++ b/static/content/site.css
@@ -50,15 +50,23 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
+h1 {
+    font-size: 2.5rem;
+    color: #2F1359;
+    font-weight: 500;
+}
+
 h2 {
     font-weight: 500;
     font-size: 1.5rem;
 }
 
-h1 {
-    font-size: 2.5rem;
-    color: #2F1359;
+
+h3 {
     font-weight: 500;
+    font-size: 1.4rem;
+    display: inline-block;
+    margin-left: 1rem;
 }
 
 /*          ----------            video edit template          ----------          */
@@ -170,7 +178,7 @@ svg {
 }
 
 .greyBG {
-    background-color: #F3F5F8;
+    background-color: #F9FAFB;
 }
 
 .slidetextSize {
@@ -341,8 +349,8 @@ align-items: center;
 #content{
     display: flex;
     flex-direction: column;
-    height:80vh;
-    overflow: scroll;
+    height:76vh;
+    overflow-y: scroll;
 }
 
 
@@ -365,6 +373,8 @@ align-items: center;
     align-content: space-around;
 }
 
+
+
 input[type=button], input[type=submit], .primaryBTN {
     background-color: #6515DD;
     border: solid 0.125rem #6515DD;
@@ -386,6 +396,45 @@ input[type=button]:hover, input[type=submit]:hover, .primaryBTN:hover {
     box-shadow: 5px 6px 12px rgba(0, 83, 101, 0.12);
 }
 
+.secondaryBtn{
+    border: solid 0.125rem #6515DD;
+    color: #6515DD;
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.03em;
+    position: relative;
+    height: 24px;
+}
+
+.lit_sec{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 4px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    display: inline-block;
+
+    /* CTA NEW */
+    color: #6515DD;
+}
+
+.secondaryBtn:hover{
+    border: 0.125rem solid #00B6DE;
+    color: #00B6DE;
+    box-shadow: 0px 0.393927px 0.324411px rgba(6, 94, 105, 0.0387487), 0px 0.915912px 0.754281px rgba(6, 94, 105, 0.0559829), 0px 1.64477px 1.35451px rgba(6, 94, 105, 0.0690078), 0px 2.7297px 2.24799px rgba(6, 94, 105, 0.0809922), 0px 4.49709px 3.70349px rgba(6, 94, 105, 0.0940171), 0px 5px 6.47262px rgba(6, 94, 105, 0.111251);
+}
+.secondaryBtn:disabled{
+    border: 0.125rem #BDBDBD;
+    color: #BDBDBD ;
+}
+
 .xxx {
     display: block;
     width: max-content;
@@ -398,4 +447,36 @@ input[type=button]:hover, input[type=submit]:hover, .primaryBTN:hover {
 
 .input-group-text {
     width: 100%;
+}
+
+#mainAnimation{
+    margin-bottom: 2rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 0.125rem solid rgba(189, 189, 189, 0.15);
+    padding: 0.75rem 0.75rem;
+    border-radius: 1rem;
+}
+
+
+/*          ----------            -webkit-scrollbar          ----------          */
+
+#content::-webkit-scrollbar, #frames_Area::-webkit-scrollbar {
+    width: 8px;
+    padding:  1.25rem 1.25rem;
+    height: 4%;
+}
+
+#content::-webkit-scrollbar-track,  #frames_Area::-webkit-scrollbar-track {
+    background-color: #f7f8f9;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.2);
+
+}
+
+#content::-webkit-scrollbar-thumb ,  #frames_Area::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background-color: #2F1359;
+    border:2px solid #d3d3d3;
+    outline-offset: -10px;
+
 }
